objects/QuoteLineItem/fields/ELV_Start_Date_in_Opp_Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>ELV_Start_Date_in_Opp_Fiscal_Year__c</fullName>
    <formula>IF(AND(MONTH(Ruby__SubscriptionStartDate__c) = 1, YEAR(Ruby__SubscriptionStartDate__c) = YEAR(Quote.Opportunity.CloseDate)), TRUE, IF(AND(MONTH(Ruby__SubscriptionStartDate__c) &gt; 1, YEAR(Ruby__SubscriptionStartDate__c)+1 = YEAR(Quote.Opportunity.CloseDate)+1), TRUE, FALSE))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Date in Opp Fiscal Year</label>
    <type>Checkbox</type>
</CustomField>