objects/QuoteLineItem/fields/ELV_Subscription_Term_Template__c.field-meta.xml
<CustomField>
    <fullName>ELV_Subscription_Term_Template__c</fullName>
    <description>Placeholder Text TNCI-97</description>
    <formula>IF(
ISPICKVAL( ELV_SubscriptionPricing__c , &quot;Fixed Price&quot;), TEXT( ROUND ( ELV_Term_Computed__c ,2)),
Null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Term Calculated</label>
    <type>Text</type>
</CustomField>