objects/QuoteLineItem/fields/ELV_SubscriptionPricing__c.field-meta.xml
<CustomField>
    <fullName>ELV_SubscriptionPricing__c</fullName>
    <label>Subscription Pricing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fixed Price</fullName>
            </value>
            <value>
                <fullName>Percent of Total</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>