objects/QuoteLineItem/fields/ELV_Suggested_Uplift_Goal__c.field-meta.xml
<CustomField>
    <fullName>ELV_Suggested_Uplift_Goal__c</fullName>
    <label>Suggested Uplift Goal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>