objects/QuoteLineItem/fields/ELV_Suggested_Uplift_Price__c.field-meta.xml
<CustomField>
    <fullName>ELV_Suggested_Uplift_Price__c</fullName>
    <label>Suggested Uplift Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>