objects/QuoteLineItem/fields/ELV_Sum_Discount_Order__c.field-meta.xml
<CustomField>
    <fullName>ELV_Sum_Discount_Order__c</fullName>
    <formula>IF(!ISBLANK(TEXT(ELV_Bundle_Type__c)), ELV_End_customer_Discount__c, IF(ISPICKVAL(ELV_Promotion__c, &quot;&quot;),(1-(1-ELV_Customer_Discount__c)*(1-Ruby__PartnerPayoutPercentage__c)),1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sum Discount Order</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>