objects/QuoteLineItem/fields/ELV_Sum_of_Discount_Margin__c.field-meta.xml
<CustomField>
    <fullName>ELV_Sum_of_Discount_Margin__c</fullName>
    <formula>1-(1-ELV_Customer_Discount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sum of Discount &amp; Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>