objects/QuoteLineItem/fields/ELV_Support_List_Total__c.field-meta.xml
<CustomField>
    <fullName>ELV_Support_List_Total__c</fullName>
    <label>Support List Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>