objects/QuoteLineItem/fields/ELV_Supported_Hardware_Line__c.field-meta.xml
<CustomField>
    <fullName>ELV_Supported_Hardware_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>User entered field. Lookup to Hardware Line this Support Line is associated with.</inlineHelpText>
    <label>Supported Hardware Line</label>
    <referenceTo>QuoteLineItem</referenceTo>
    <relationshipLabel>Support Quote Lines</relationshipLabel>
    <relationshipName>Support_Quote_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>