objects/QuoteLineItem/fields/ELV_Supported_Hardware_Line_Asset__c.field-meta.xml
<CustomField>
    <fullName>ELV_Supported_Hardware_Line_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Asset record in which this Support Quote Line is associated with.</inlineHelpText>
    <label>Supported Hardware Line (Asset)</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Asset.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Ruby__BillingAccount__c</valueField>
        </filterItems>
        <infoMessage>Asset should be related to same Account</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Support Quote Lines</relationshipLabel>
    <relationshipName>Support_Quote_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>