objects/QuoteLineItem/fields/ELV_System_Software_Net_Total__c.field-meta.xml
<CustomField>
    <fullName>ELV_System_Software_Net_Total__c</fullName>
    <label>System Software Net Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>