objects/QuoteLineItem/fields/ELV_Tanium_Pricing_Schedule__c.field-meta.xml
<CustomField>
    <fullName>ELV_Tanium_Pricing_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tanium Pricing Schedule</label>
    <referenceTo>Tanium_Pricing_Schedule__c</referenceTo>
    <relationshipLabel>Quote Line Items (Tanium Pricing Schedule)</relationshipLabel>
    <relationshipName>ELV_Tanium_Pricing_Schedule_QL</relationshipName>
    <type>Lookup</type>
</CustomField>