objects/QuoteLineItem/fields/ELV_Target_Additional_Discount__c.field-meta.xml
<CustomField>
    <fullName>ELV_Target_Additional_Discount__c</fullName>
    <label>Target Additional Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>