objects/QuoteLineItem/fields/ELV_Target_Net_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>ELV_Target_Net_Unit_Price__c</fullName>
    <label>Target Net Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>