objects/QuoteLineItem/fields/ELV_Target_Total__c.field-meta.xml
<CustomField>
    <fullName>ELV_Target_Total__c</fullName>
    <label>Target Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>