objects/QuoteLineItem/fields/ELV_Template_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>ELV_Template_Product_Name__c</fullName>
    <formula>LPAD( Ruby__ProductName__c, LEN( Ruby__ProductName__c ) + ( 4 * ELV_OptionLevel__c ), &quot; &quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Template Product Name</label>
    <type>Text</type>
</CustomField>