objects/QuoteLineItem/fields/ELV_Term_Computed__c.field-meta.xml
<CustomField>
    <fullName>ELV_Term_Computed__c</fullName>
    <formula>IF(ISBLANK( Ruby__SubscriptionEndDate__c),(IF(ISBLANK(Quote.Ruby__SubscriptionEndDate__c),Ruby__SubscriptionTerm__c,(YEAR(Quote.Ruby__SubscriptionEndDate__c) - YEAR(Ruby__SubscriptionStartDate__c))*12 - MONTH(Ruby__SubscriptionStartDate__c) + 
   MONTH(Quote.Ruby__SubscriptionEndDate__c) +
  ((DAY(Quote.Ruby__SubscriptionEndDate__c) - DAY(Ruby__SubscriptionStartDate__c) + 1) /
  CASE(MONTH(Quote.Ruby__SubscriptionEndDate__c),
  4,30,
  6,30,
  9,30,
  11,30,
  2, IF(OR( MOD( YEAR(Quote.Ruby__SubscriptionEndDate__c), 400 ) = 0, AND( MOD( YEAR(Quote.Ruby__SubscriptionEndDate__c), 4 ) = 0, MOD( 
  YEAR( Quote.Ruby__SubscriptionEndDate__c ), 100 ) != 0 ) ),29,28),
  31)))),(YEAR(Ruby__SubscriptionEndDate__c) - YEAR(Ruby__SubscriptionStartDate__c))*12 - MONTH(Ruby__SubscriptionStartDate__c) + 
   MONTH(Ruby__SubscriptionEndDate__c) +
  ((DAY(Ruby__SubscriptionEndDate__c) - DAY(Ruby__SubscriptionStartDate__c) + 1) /
  CASE(MONTH(Ruby__SubscriptionEndDate__c),
  4,30,
  6,30,
  9,30,
  11,30,
  2, IF(OR( MOD( YEAR(Ruby__SubscriptionEndDate__c), 400 ) = 0, AND( MOD( YEAR(Ruby__SubscriptionEndDate__c), 4 ) = 0, MOD( 
  YEAR(Ruby__SubscriptionEndDate__c ), 100 ) != 0 ) ),29,28),
  31)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Term Computed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>