objects/QuoteLineItem/fields/ELV_Total_Partner_Discount__c.field-meta.xml
<CustomField>
    <fullName>ELV_Total_Partner_Discount__c</fullName>
    <formula>IF(ISBLANK(ELV_Standard_Partner_Discount__c), 0, ELV_Standard_Partner_Discount__c + IF(ISBLANK(ELV_Opportunity_Registration_Discount__c), 0, ELV_Opportunity_Registration_Discount__c + IF(ISBLANK(ELV_Advantage_Plus_Partner_Discount__c), 0, ELV_Advantage_Plus_Partner_Discount__c + IF(ISBLANK(ELV_L1_L2_Support_Discount__c), 0, ELV_L1_L2_Support_Discount__c + IF(ISBLANK(ELV_Partner_Discretionary_Discount__c), 0, ELV_Partner_Discretionary_Discount__c )))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Partner Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>