objects/QuoteLineItem/fields/ELV_Training_List_Total__c.field-meta.xml
<CustomField>
    <fullName>ELV_Training_List_Total__c</fullName>
    <label>Training List Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>