objects/QuoteLineItem/fields/ELV_TrainingDeliveryType__c.field-meta.xml
<CustomField>
    <fullName>ELV_TrainingDeliveryType__c</fullName>
    <label>Training Delivery Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Instructor-Led Training (ILT)</fullName>
            </value>
            <value>
                <fullName>Virtual Instructor-Led Training (vILT)</fullName>
            </value>
            <value>
                <fullName>Web-Based Training (WBT)</fullName>
            </value>
            <value>
                <fullName>Exam</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>