objects/QuoteLineItem/fields/ELV_Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>ELV_Transaction_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Add-On</fullName>
            </value>
            <value>
                <fullName>Upsell</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>POC/Trial</fullName>
            </value>
            <value>
                <fullName>New Customer</fullName>
            </value>
            <value>
                <fullName>Ramp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>