objects/QuoteLineItem/fields/ELV_Unit_Price_Variance__c.field-meta.xml
<CustomField>
    <fullName>ELV_Unit_Price_Variance__c</fullName>
    <label>Unit Price Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>