objects/QuoteLineItem/fields/Ruby__ActualQuantity__c.field-meta.xml
<CustomField>
    <fullName>Ruby__ActualQuantity__c</fullName>
    <description>The actual quantity of the product used for price calculation.</description>
    <inlineHelpText>The actual quantity of the product used for price calculation.</inlineHelpText>
    <label>Actual Quantity</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>