objects/QuoteLineItem/fields/Ruby__ActualSubscriptionTerm__c.field-meta.xml
<CustomField>
    <fullName>Ruby__ActualSubscriptionTerm__c</fullName>
    <label>Actual Term</label>
    <precision>16</precision>
    <scale>11</scale>
    <type>Number</type>
</CustomField>