objects/QuoteLineItem/fields/Ruby__BillingAccount__c.field-meta.xml
<CustomField>
    <fullName>Ruby__BillingAccount__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The billing account assigned to this line item. Inherited from the matched subscription&apos;s billing account on renewal/change quotes. Defaults to the Quote header&apos;s Billing Account for new adds.</description>
    <inlineHelpText>The billing account assigned to this line item.</inlineHelpText>
    <label>Billing Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Billing Quote Line Items</relationshipLabel>
    <relationshipName>BillingQuoteLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>