objects/QuoteLineItem/fields/Ruby__ChangeReferenceQuoteLineItem__c.field-meta.xml
<CustomField>
    <fullName>Ruby__ChangeReferenceQuoteLineItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The quote line item this change item refers to</description>
    <label>Change Reference Quote Item</label>
    <referenceTo>QuoteLineItem</referenceTo>
    <relationshipLabel>Changed Quote Line Items</relationshipLabel>
    <relationshipName>ChangedQuoteLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>