objects/QuoteLineItem/fields/Ruby__ConvertFreeTrialDate__c.field-meta.xml
<CustomField>
    <fullName>Ruby__ConvertFreeTrialDate__c</fullName>
    <description>Date when the free trial subscription is converted to a termed subscription</description>
    <label>Free Trial Conversion Date</label>
    <type>Date</type>
</CustomField>