objects/QuoteLineItem/fields/Ruby__Credit_Pool__c.field-meta.xml
<CustomField>
    <fullName>Ruby__Credit_Pool__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Credit Pool this quote line routes to. Pre-filled from the PBE/Product default; the rep can override it, or pick None to invoice independently.</description>
    <inlineHelpText>Credit Pool this line routes to. Pick None to invoice independently.</inlineHelpText>
    <label>Credit Pool</label>
    <referenceTo>Ruby__CreditPool__c</referenceTo>
    <relationshipLabel>Quote Line Items</relationshipLabel>
    <relationshipName>Quote_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>