objects/QuoteLineItem/fields/Ruby__DeltaACV__c.field-meta.xml
<CustomField>
    <fullName>Ruby__DeltaACV__c</fullName>
    <description>The delta Annual Contractual Value contributed by this line item.</description>
    <inlineHelpText>The delta Annual Contractual Value contributed by this line item.</inlineHelpText>
    <label>Delta ACV</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>