objects/QuoteLineItem/fields/Ruby__DeltaARR__c.field-meta.xml
<CustomField>
    <fullName>Ruby__DeltaARR__c</fullName>
    <description>The delta Annual Recurring Revenue contributed by this line item, effective between Start Date and End Date of the line item.  It is Delta CMRR * 12.</description>
    <inlineHelpText>The delta Annual Recurring Revenue contributed by this line item, effective between Start Date and End Date of the line item.  It is Delta CMRR * 12.</inlineHelpText>
    <label>Delta ARR</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>