objects/QuoteLineItem/fields/Ruby__DeltaCMRR__c.field-meta.xml
<CustomField>
    <fullName>Ruby__DeltaCMRR__c</fullName>
    <description>The delta Contractual Monthly Recurring Revenue contributed by this line item, effective between Start Date and End Date of the line item.</description>
    <inlineHelpText>The delta Contractual Monthly Recurring Revenue contributed by this line item, effective between Start Date and End Date of the line item.</inlineHelpText>
    <label>Delta CMRR</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>