objects/QuoteLineItem/fields/Ruby__DeltaCommittedARR__c.field-meta.xml
<CustomField>
    <fullName>Ruby__DeltaCommittedARR__c</fullName>
    <description>The delta Committed Annual Recurring Revenue contributed by this line item, effective between Start Date and End Date of the line item.  It is Delta Committed CMRR * 12.</description>
    <inlineHelpText>The delta Committed Annual Recurring Revenue contributed by this line item, effective between Start Date and End Date of the line item.  It is Delta Committed CMRR * 12.</inlineHelpText>
    <label>Delta Committed ARR</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>