objects/QuoteLineItem/fields/Ruby__DeltaTCV__c.field-meta.xml
<CustomField>
    <fullName>Ruby__DeltaTCV__c</fullName>
    <description>The delta Total Contractual Value contributed by this line item.</description>
    <inlineHelpText>The delta Total Contractual Value contributed by this line item.</inlineHelpText>
    <label>Delta TCV</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>