objects/QuoteLineItem/fields/Ruby__Discount__c.field-meta.xml
<CustomField>
    <fullName>Ruby__Discount__c</fullName>
    <description>The discount (in percentage) that Sales Rep applies to the quote line item. You can enter a number with or without the percent symbol. You can use up to two decimal places.</description>
    <label>Discount %</label>
    <precision>12</precision>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>