objects/QuoteLineItem/fields/Ruby__Entity__c.field-meta.xml
<CustomField>
    <fullName>Ruby__Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The associated entity.</description>
    <label>Entity</label>
    <referenceTo>Ruby__Entity__c</referenceTo>
    <relationshipLabel>Quote Line Items</relationshipLabel>
    <relationshipName>QuoteLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>