objects/QuoteLineItem/fields/Ruby__EntityUseCode__c.field-meta.xml
<CustomField>
    <fullName>Ruby__EntityUseCode__c</fullName>
    <description>Entity use codes are standardized codes that represent the reason or purpose for a particular transaction. They help in identifying the specific taxability rules that apply to a transaction based on its intended use or purpose.</description>
    <inlineHelpText>Entity use codes are standardized codes that represent the reason or purpose for a particular transaction. They help in identifying the specific taxability rules that apply to a transaction based on its intended use or purpose.</inlineHelpText>
    <label>Entity Use Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <label>FEDERAL GOV</label>
            </value>
            <value>
                <fullName>B</fullName>
                <label>STATE GOV</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>TRIBAL GOVERNMENT</label>
            </value>
            <value>
                <fullName>D</fullName>
                <label>FOREIGN DIPLOMAT</label>
            </value>
            <value>
                <fullName>E</fullName>
                <label>CHARITABLE/EXEMPT ORG</label>
            </value>
            <value>
                <fullName>F</fullName>
                <label>RELIGIOUS ORG</label>
            </value>
            <value>
                <fullName>G</fullName>
                <label>RESALE</label>
            </value>
            <value>
                <fullName>H</fullName>
                <label>AGRICULTURE</label>
            </value>
            <value>
                <fullName>I</fullName>
                <label>INDUSTRIAL PROD/MANUFACTURERS</label>
            </value>
            <value>
                <fullName>J</fullName>
                <label>DIRECT PAY</label>
            </value>
            <value>
                <fullName>K</fullName>
                <label>DIRECT MAIL</label>
            </value>
            <value>
                <fullName>L</fullName>
                <label>OTHER/CUSTOM</label>
            </value>
            <value>
                <fullName>M</fullName>
                <label>EDUCATIONAL ORG</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>LOCAL GOVERNMENT</label>
            </value>
            <value>
                <fullName>P</fullName>
                <label>COMMERCIAL AQUACULTURE</label>
            </value>
            <value>
                <fullName>Q</fullName>
                <label>COMMERCIAL FISHERY</label>
            </value>
            <value>
                <fullName>R</fullName>
                <label>NON-RESIDENT</label>
            </value>
            <value>
                <fullName>TAXABLE</fullName>
                <label>NON-EXEMPT TAXABLE CUSTOMER</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>