objects/QuoteLineItem/fields/Ruby__Evergreen__c.field-meta.xml
<CustomField>
    <fullName>Ruby__Evergreen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Evergreen</label>
    <type>Checkbox</type>
</CustomField>