objects/QuoteLineItem/fields/Ruby__FirstFullCreditPeriodStartDate__c.field-meta.xml
<CustomField>
    <fullName>Ruby__FirstFullCreditPeriodStartDate__c</fullName>
    <label>First Full Credit Period Start Date</label>
    <type>Date</type>
</CustomField>