objects/QuoteLineItem/fields/Ruby__IncludedUnits__c.field-meta.xml
<CustomField>
    <fullName>Ruby__IncludedUnits__c</fullName>
    <description>The number of included units for this line.  This value overrides the included units of the product option, if this line item is part of a bundle.</description>
    <inlineHelpText>The number of included units for this line.  This value overrides the included units of the product option, if this line item is part of a bundle.</inlineHelpText>
    <label>Included Units</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>