objects/QuoteLineItem/fields/Ruby__IsChange__c.field-meta.xml
<CustomField>
    <fullName>Ruby__IsChange__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Change</label>
    <type>Checkbox</type>
</CustomField>