objects/QuoteLineItem/fields/Ruby__LifecycleEndDate__c.field-meta.xml
<CustomField>
    <fullName>Ruby__LifecycleEndDate__c</fullName>
    <label>Lifecycle End Date</label>
    <type>Date</type>
</CustomField>