objects/QuoteLineItem/fields/Ruby__LifecycleStartDate__c.field-meta.xml
<CustomField>
    <fullName>Ruby__LifecycleStartDate__c</fullName>
    <label>Lifecycle Start Date</label>
    <type>Date</type>
</CustomField>