objects/QuoteLineItem/fields/Ruby__LineBucket__c.field-meta.xml
<CustomField>
    <fullName>Ruby__LineBucket__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the Quote Line Bucket, if this line belongs to a bucket. If null, then the line item is in the default bucket.</description>
    <label>Line Bucket</label>
    <referenceTo>Ruby__LineBucket__c</referenceTo>
    <relationshipLabel>Quote Line Items</relationshipLabel>
    <relationshipName>QuoteLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>