objects/QuoteLineItem/fields/Ruby__LineType__c.field-meta.xml
<CustomField>
    <fullName>Ruby__LineType__c</fullName>
    <defaultValue>&apos;LineItem&apos;</defaultValue>
    <label>Line Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>LineItem</fullName>
                <default>true</default>
                <label>Product</label>
            </value>
            <value>
                <fullName>RampItem</fullName>
                <label>Ramp Item</label>
            </value>
            <value>
                <fullName>SplitItem</fullName>
                <label>Split Line</label>
            </value>
            <value>
                <fullName>SummaryItem</fullName>
                <label>Summary Item</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>