objects/QuoteLineItem/fields/Ruby__ListPrice__c.field-meta.xml
<CustomField>
    <fullName>Ruby__ListPrice__c</fullName>
    <description>The list price of the line item, determined by the Price Book Entry.

Please note that Salesforce also populates its own standard field ‘List Price (ListPrice)’ as the list price of the line item.</description>
    <inlineHelpText>The list price of the line item, determined by the Price Book Entry.

Please note that Salesforce also populates its own standard field ‘List Price (ListPrice)’ as the list price of the line item.</inlineHelpText>
    <label>List Price</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>