objects/QuoteLineItem/fields/Ruby__ListTotalPrice__c.field-meta.xml
<CustomField>
    <fullName>Ruby__ListTotalPrice__c</fullName>
    <description>The total list price, calculated as List Price * Actual Quantity * Actual Term.</description>
    <inlineHelpText>The total list price, calculated as List Price * Actual Quantity * Actual Term.</inlineHelpText>
    <label>List Total</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>