objects/QuoteLineItem/fields/Ruby__Milestones__c.field-meta.xml
<CustomField>
    <fullName>Ruby__Milestones__c</fullName>
    <description>A JSON Representation of the service milestones created for the parent line item.</description>
    <inlineHelpText>A JSON Representation of the service milestones created for the parent line item.</inlineHelpText>
    <label>Milestones</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>