objects/QuoteLineItem/fields/Ruby__NetSalesPrice__c.field-meta.xml
<CustomField>
    <fullName>Ruby__NetSalesPrice__c</fullName>
    <description>The net sales price of the line item.  It is the unit price.  It is calculated as Total Price / Actual Quantity / Actual Term.</description>
    <inlineHelpText>The net sales price of the line item.  It is the unit price.  It is calculated as Total Price / Actual Quantity / Actual Term.</inlineHelpText>
    <label>Net Sales Price</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>