objects/QuoteLineItem/fields/Ruby__NetSellerPrice__c.field-meta.xml
<CustomField>
    <fullName>Ruby__NetSellerPrice__c</fullName>
    <description>Unit Price after partner margin/Partner Discount. Calculated as Net Sales Price × (1 - Partner Discount %).</description>
    <inlineHelpText>Unit Price after partner margin/Partner Discount. Calculated as Net Sales Price × (1 - Partner Discount %).</inlineHelpText>
    <label>Net Seller Price</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>