objects/QuoteLineItem/fields/Ruby__OpportunityLineItem__c.field-meta.xml
<CustomField>
    <fullName>Ruby__OpportunityLineItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Line Item</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>Quote Line Items</relationshipLabel>
    <relationshipName>QuoteLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>