objects/QuoteLineItem/fields/Ruby__ParentId__c.field-meta.xml
<CustomField>
    <fullName>Ruby__ParentId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The parent quote line in a bundle product structure.</description>
    <inlineHelpText>The parent quote line in a bundle product structure.</inlineHelpText>
    <label>Parent Quote Line</label>
    <referenceTo>QuoteLineItem</referenceTo>
    <relationshipLabel>Quote Line Items</relationshipLabel>
    <relationshipName>Quote_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>