objects/QuoteLineItem/fields/Ruby__ProductOption__c.field-meta.xml
<CustomField>
    <fullName>Ruby__ProductOption__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Option</label>
    <referenceTo>Ruby__ProductOption__c</referenceTo>
    <relationshipLabel>Quote Line Items</relationshipLabel>
    <relationshipName>Quote_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>