objects/QuoteLineItem/fields/Ruby__ReconfigureEffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>Ruby__ReconfigureEffectiveDate__c</fullName>
    <description>Reconfigure effective date</description>
    <label>Reconfigure Effective Date</label>
    <type>Date</type>
</CustomField>