objects/QuoteLineItem/fields/Ruby__RootId__c.field-meta.xml
<CustomField>
    <fullName>Ruby__RootId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Root quote line in a bundle product structure.  It references the bundle line item.</description>
    <inlineHelpText>The Root quote line in a bundle product structure.  It references the bundle line item.</inlineHelpText>
    <label>Root Quote Line</label>
    <referenceTo>QuoteLineItem</referenceTo>
    <relationshipLabel>Quote Line Items (Root Quote Line)</relationshipLabel>
    <relationshipName>Quote_Line_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>