objects/QuoteLineItem/fields/Ruby__ShouldProrateQuantity__c.field-meta.xml
<CustomField>
    <fullName>Ruby__ShouldProrateQuantity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prorate Credits for Partial Term</label>
    <type>Checkbox</type>
</CustomField>