objects/QuoteLineItem/fields/Ruby__SortOrder__c.field-meta.xml
<CustomField>
    <fullName>Ruby__SortOrder__c</fullName>
    <description>The sort order of this line displayed in the line editor.</description>
    <inlineHelpText>The sort order of this line displayed in the line editor.</inlineHelpText>
    <label>Sort Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>