objects/QuoteLineItem/fields/Ruby__SplitParent__c.field-meta.xml
<CustomField>
    <fullName>Ruby__SplitParent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the Quote Line from which this Quote Line was split.</description>
    <label>Split Parent</label>
    <referenceTo>QuoteLineItem</referenceTo>
    <relationshipLabel>Split Quote Line Items</relationshipLabel>
    <relationshipName>SplitQuoteLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>