objects/QuoteLineItem/fields/Ruby__SubscriptionEndDate__c.field-meta.xml
<CustomField>
    <fullName>Ruby__SubscriptionEndDate__c</fullName>
    <description>The Subscription End Date, which is defaulted to the Subscription Start Date plus the Term (in Month).</description>
    <inlineHelpText>The Subscription End Date, which is defaulted to the Subscription Start Date plus the Term (in Month).</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>