objects/QuoteLineItem/fields/Ruby__SubscriptionStartDate__c.field-meta.xml
<CustomField>
    <fullName>Ruby__SubscriptionStartDate__c</fullName>
    <description>The Service Start Date, which is defaulted to the Quote Start Date, but can be updated for different quote lines.</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>