objects/QuoteLineItem/fields/Ruby__SubscriptionTerm__c.field-meta.xml
<CustomField>
    <fullName>Ruby__SubscriptionTerm__c</fullName>
    <description>The subscription term measured by UOM.</description>
    <inlineHelpText>The subscription term measured by UOM.</inlineHelpText>
    <label>Subscription Term</label>
    <precision>16</precision>
    <scale>11</scale>
    <type>Number</type>
</CustomField>